--- a/generate_input_file.ipynb
+++ b/generate_input_file.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0b44fe49",
+   "execution_count": null,
+   "id": "975c7e15",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ha die Jan!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Ha die Jan!')"
    ]
@@ -21,7 +13,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b66f0fd8",
+   "id": "360b4dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "from datetime import datetime, timedelta\n",
+    "    \n",
+    "d = datetime.today() - timedelta(days=days_to_subtract)\n",
+    "colors = ['yellow', 'brown', 'black', 'orange', 'green', 'blue']\n",
+    "contactpersons = ['Piet', 'Klaas', 'Frits', 'Willem', 'Olaf', 'Pascal', 'Hein', 'Oscar', 'Ruud']\n",
+    "    \n",
+    "with open (\"data/input_file.csv\", \"w\", encoding='UTF8') as out_file:\n",
+    "\n",
+    "    writer = csv.writer(out_file)\n",
+    "    \n",
+    "    #write header\n",
+    "    header = ['id', 'name', 'color', 'contactperson']\n",
+    "    writer.writerow(header)\n",
+    "\n",
+    "    for x in range(500000):\n",
+    "    \n",
+    "        id = ('00000000000' + str(x))[-10:]\n",
+    "        \n",
+    "        name = 'name_' + id\n",
+    "        \n",
+    "        color = colors[round((len(colors) - 1) * rnd.random())]\n",
+    "\n",
+    "        contactperson = contactpersons[round((len(colors) - 1) * rnd.random())]\n",
+    "\n",
+    "        row = [id, name, color, contactperson]\n",
+    "        \n",
+    "        writer.writerow(row)\n",
+    "\n",
+    "print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff1a35ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat \"data/input_file.csv\"\n",
+    "!head \"data/input_file.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33ba6e48",
    "metadata": {},
    "outputs": [],
    "source": []
